--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -1,3 +1,12 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  position: relative;
+  font-weight: normal;
+}
+
 html {
   margin: 0;
   padding: 0;
